[gd_scene load_steps=5 format=3 uid="uid://bqq23f46gue27"]

[ext_resource type="Shader" path="res://shaders/mandelbrot.gdshader" id="1_d8eam"]
[ext_resource type="Script" path="res://scripts/mandelbrot_viewer.gd" id="2_qbay7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sq7sm"]
shader = ExtResource("1_d8eam")
shader_parameter/iterations = 40
shader_parameter/pos = Vector2(0, 0)
shader_parameter/zoom = 1.0
shader_parameter/aspect_ratio = null
shader_parameter/order = 2
shader_parameter/brightness = 1.0
shader_parameter/starting_color = Vector3(0, 0, 0)
shader_parameter/ending_color = Vector3(0.4, 0.8, 0.6)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_08ldf"]

[node name="Mandelbrot" type="Node2D"]
script = ExtResource("2_qbay7")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_sq7sm")
offset_right = 512.0
offset_bottom = 512.0
texture = SubResource("PlaceholderTexture2D_08ldf")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
